[package]
name = "lightningd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clightningrpc = "0.2.0"
tempfile = "3.3.0"
bitcoind = "0.24.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.9"

[features]
bitcoind_22_0 = ["bitcoind/22_0"]
bitcoind_0_21_1 = ["bitcoind/0_21_1"]
bitcoind_0_21_0 = ["bitcoind/0_21_0"]
bitcoind_0_20_1 = ["bitcoind/0_20_1"]
bitcoind_0_20_0 = ["bitcoind/0_20_0"]
bitcoind_0_19_1 = ["bitcoind/0_19_1"]
bitcoind_0_19_0_1 = ["bitcoind/0_19_0_1"]
bitcoind_0_18_1 = ["bitcoind/0_18_1"]
bitcoind_0_18_0 = ["bitcoind/0_18_0"]
bitcoind_0_17_1 = ["bitcoind/0_17_1"]
