[package]
name = "lightningd"
version = "0.1.0"
edition = "2021"
description = "Utility to run a regtest lightningd process, useful in integration testing environment."
license = "MIT"
repository = "https://github.com/RCasatta/lightningd"
documentation = "https://docs.rs/lightningd/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clightningrpc = "0.3.0-beta.7"
tempfile = "3.3.0"
bitcoind = "0.34.1"
log = "0.4"

[dev-dependencies]
env_logger = "0.9"

[features]
bitcoind_25_1 = ["bitcoind/25_1"]
bitcoind_25_0 = ["bitcoind/25_0"]
bitcoind_24_0_1 = ["bitcoind/24_0_1"]
bitcoind_23_1 = ["bitcoind/23_1"]
bitcoind_22_1 = ["bitcoind/22_1"]
bitcoind_0_21_2 = ["bitcoind/0_21_2"]
bitcoind_0_20_2 = ["bitcoind/0_20_2"]
bitcoind_0_19_1 = ["bitcoind/0_19_1"]
bitcoind_0_18_1 = ["bitcoind/0_18_1"]
bitcoind_0_17_1 = ["bitcoind/0_17_1"]
